# UXRay

./: .gitignore  README.md  azure-pipelines.yml  pyproject.toml  run.py
ai_audit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: main.py
app/api/: routes.py
app/core/: config.py  schemas.py  state.py
app/services/: browser_service.py  refinement_service.py  vision_service.py
app/workflows/: audit_graph.py
backend/: main.py
backend/api/: routes.py
backend/services/: browser_service.py  refinement_service.py  vision_service.py
backend/workflows/: audit_graph.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: AuditResults.tsx  IssueCard.tsx  UrlInput.tsx
